# libnkutils

./: CMakeLists.txt
include/: nkutils-xdg-theme.h
src/: xdg-theme.c
